--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Terves maailmas pole ägedamat reisiblogi: jälgi minu seiklusi seitsmel kontinendil!">
+    <meta name="description" content="Terves maailmas pole ägedamat toidublogi!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>FOLLOW ME | Reisiblogi</title>
+    <title>COOKBOOK | Toidublogi</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -16,6 +16,7 @@
             <h2>Eesti maitsvaim retseptiveeb</h2>
         </div>
     </section>
+    <hr>
     <nav>
         <ul>
             <li><a href="#">Retseptid</a></li>
@@ -24,23 +25,28 @@
     </nav>
 </header>
 <main>
-    <section class="bänner"></section>
-    <section class="meist">
-        <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Cursus metus aliquam eleifend mi in. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim.
-                Lorem dolor sed viverra ipsum nunc aliquet bibendum enim.
-                Amet tellus cras adipiscing enim eu turpis egestas pretium.
-                Urna neque viverra justo nec ultrices dui sapien eget. Non curabitur gravida arcu ac.
-                Tellus id interdum velit laoreet id donec ultrices. Dolor purus non enim praesent elementum.
-                Mattis nunc sed blandit libero volutpat. Urna duis convallis convallis tellus. Et magnis dis parturient montes.
-                Fusce id velit ut tortor pretium. Facilisi morbi tempus iaculis urna id volutpat lacus.
-                Leo integer malesuada nunc vel risus commodo viverra.</p>
+    <section class="bänner">
+        <img src="img/banner.jpg">
+    </section>
+    <section class="us">
+        <h2 class="gallery-h2">Meist</h2>
+        <div class="container_2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Cursus metus aliquam eleifend mi in. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim.
+                    Lorem dolor sed viverra ipsum nunc aliquet bibendum enim.
+                    Amet tellus cras adipiscing enim eu turpis egestas pretium.
+                    Urna neque viverra justo nec ultrices dui sapien eget. Non curabitur gravida arcu ac.
+                    Tellus id interdum velit laoreet id donec ultrices. Dolor purus non enim praesent elementum.
+                    Mattis nunc sed blandit libero volutpat. Urna duis convallis convallis tellus. Et magnis dis parturient montes.
+                    Fusce id velit ut tortor pretium. Facilisi morbi tempus iaculis urna id volutpat lacus.
+                    Leo integer malesuada nunc vel risus commodo viverra.</p>
+            <div class="disclaimer">
+                <img src="img/chefs.jpg">
+            </div>
         </div>
     </section>
 
     <div class="index-header">
-        <hr/>
         <h2 class="gallery-h2">Retseptid</h2>
     </div>
     <section class="gallery-links">
